--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <span class="badge">MySQL</span>
             </div>
             <br>
-            <a href="https://github.com/YOUR_GITHUB_ID/YOUR_YEARBOOK_REPO">View Source Code →</a>
+            <a href="https://github.com/AkbarDAfandi/bts-smkn1lmj-2025">View Source Code →</a>
         </div>
 
         <div class="card">
@@ -170,11 +170,11 @@
                 <span class="badge">MVVM</span>
             </div>
             <br>
-            <a href="https://github.com/YOUR_GITHUB_ID/YOUR_CLOUDY_REPO">View Source Code →</a>
+            <a href="https://github.com/AkbarDAfandi/CloudyNotes">View Source Code →</a>
         </div>
 
         <div class="card">
-            <h3>📚 lib-Track</h3>
+            <h3>📚 Lib-Track</h3>
             <div class="meta">Library Management System</div>
             <p>A pure native PHP application demonstrating core understanding of CRUD operations, session management, and relational database logic.</p>
             <div>
@@ -183,7 +183,7 @@
                 <span class="badge">Inventory System</span>
             </div>
             <br>
-            <a href="https://github.com/YOUR_GITHUB_ID/YOUR_LIBTRACK_REPO">View Source Code →</a>
+            <a href="https://github.com/AkbarDAfandi/libtrackphp">View Source Code →</a>
         </div>
     </section>
 
@@ -192,7 +192,7 @@
         <ul>
             <li><strong>GitHub:</strong> <a href="https://github.com/AkbarDAfandi">github.com/AkbarDAfandi</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/akbar-afandi/">linkedin.com/in/akbar-afandi</a></li>
-            <li><strong>Instagram:</strong> <a href="https://instagram.com/rexec.png">@rexec.png/a></li>
+            <li><strong>Instagram:</strong> <a href="https://instagram.com/rexec.png">@rexec.png</a></li>
         </ul>
     </section>
 
