--- a/index.html
+++ b/index.html
@@ -6,38 +6,39 @@
     <title>Muhammad Akbar Dwi Afandi - Backend Developer Portfolio</title>
     <meta name="description" content="Portfolio of Muhammad Akbar Dwi Afandi, a Vocational Backend Developer specializing in Laravel, PHP, and Flutter. Student at SMKN 1 Lumajang.">
     
-    <script type="application/ld+json">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Muhammad Akbar Dwi Afandi",
+  "jobTitle": "Backend Developer",
+  "url": "https://www.akbarafandi.my.id",
+  "image": "https://avatars.githubusercontent.com/u/AkbarDAfandi",
+  "affiliation": [
     {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Muhammad Akbar Dwi Afandi",
-      "jobTitle": "Backend Developer",
-      "url": "https://execute-re.github.io", 
-      "image": "https://avatars.githubusercontent.com/u/YOUR_GITHUB_ID",
-      "affiliation": [
-        {
-          "@type": "Organization",
-          "name": "SMK Negeri 1 Lumajang Journalism Club",
-          "roleName": "Vice Chairman (2024-2025)"
-        },
         {
           "@type": "Organization",
           "name": "SMK Negeri 1 Lumajang Theater Club",
           "roleName": "Chairman (2024-2025)"
+        },
+        {
+          "@type": "Organization",
+          "name": "SMK Negeri 1 Lumajang Journalism Club",
+          "roleName": "Vice Chairman (2024-2025)"
         }
-      ],
-      "alumniOf": {
-        "@type": "EducationalOrganization",
-        "name": "SMK Negeri 1 Lumajang"
-      },
-      "knowsAbout": ["Laravel", "PHP", "Flutter", "Supabase", "IoT", "MySQL"],
-      "sameAs": [
-        "https://www.linkedin.com/in/YOUR_LINKEDIN_ID",
-        "https://github.com/YOUR_GITHUB_ID",
-        "https://www.instagram.com/execute.re"
-      ]
-    }
-    </script>
+  ],
+  "alumniOf": {
+    "@type": "EducationalOrganization",
+    "name": "SMK Negeri 1 Lumajang"
+  },
+  "sameAs": [
+    "https://www.linkedin.com/in/akbar-afandi/",
+    "https://github.com/AkbarDAfandi",
+    "https://instagram.com/rexec.png",
+    "https://akbardafandi.github.io/akbardafandi/"
+  ]
+}
+</script>
 
     <style>
         :root {
