Add portfolio link to index.html
Added a new paragraph with a link to the professional portfolio.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <h1>Muhammad Akbar Dwi Afandi</h1>
         <div class="subtitle">Backend Engineer | Vocational Student | Leadership Enthusiast</div>
         <p>📍 Lumajang, East Java, Indonesia</p>
+        <p>"This is my code repository. For my full professional portfolio, visit akbarafandi.my.id."</p>
     </header>
 
     <div class="stats-grid">
