--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       "name": "Muhammad Akbar Dwi Afandi",
       "jobTitle": "Backend Developer",
       "url": "https://www.akbarafandi.my.id",
-      "image": "https://avatars.githubusercontent.com/u/AkbarDAfandi",
+      "image": "https://avatars.githubusercontent.com/u/148558698?v=4",
       "affiliation": [
         {
           "@type": "Organization",
