--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Muhammad Akbar Dwi Afandi - Backend Developer Portfolio</title>
     <meta name="description" content="Portfolio of Muhammad Akbar Dwi Afandi, a Vocational Backend Developer specializing in Laravel, PHP, and Flutter. Student at SMKN 1 Lumajang.">
     
+    <meta name="google-site-verification" content="8_75pFttK_vGucfsRO1fqwKFL2lqUb_zlutFGqvkp8o" />
 <script type="application/ld+json">
     {
       "@context": "https://schema.org",
