--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Muhammad Akbar Dwi Afandi",
+      "alternateName": ["M Akbar Afandi", "Akbar Afandi", "Muhammad Akbar"],
       "jobTitle": "Backend Developer",
       "url": "https://www.akbarafandi.my.id",
       "image": "https://avatars.githubusercontent.com/u/148558698?v=4",
@@ -152,6 +153,7 @@
             Beyond code, I have served as the <strong>Chairman of the Theater Club</strong> and <strong>Vice Chairman of the Journalism Club</strong> (2024-2025), 
             honing my leadership and communication skills.
         </p>
+        <p>Selected as a delegate for the national event <strong>Pesta Kemah Kawan SMK 2025</strong> (published as M Akbar Afandi by SMKN 1 Lumajang).</p>
     </section>
 
     <section>
