--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Akbar Dwi Afandi - Backend Developer Portfolio</title>
     <meta name="description" content="Portfolio of Muhammad Akbar Dwi Afandi, a Vocational Backend Developer specializing in Laravel, PHP, and Flutter. Student at SMKN 1 Lumajang.">
-    
+
+    <link rel="canonical" href="https://www.akbarafandi.my.id/" />
     <meta name="google-site-verification" content="8_75pFttK_vGucfsRO1fqwKFL2lqUb_zlutFGqvkp8o" />
 <script type="application/ld+json">
     {
